src/unit_tests/CustSemantics/fail/with-main-method-no-class.cl
class A {
    main(): Int {
        1
    };
};